[gd_scene load_steps=8 format=3 uid="uid://b5bb4ognyul83"]

[ext_resource type="Texture2D" uid="uid://bpay2y0dw7847" path="res://Sprites/UI/MenuBG.PNG" id="1_alwwl"]
[ext_resource type="Texture2D" uid="uid://do2v067b05hc5" path="res://Sprites/UI/StartButton.PNG" id="2_2cvrk"]
[ext_resource type="Script" path="res://Scripts/UI/start_button.gd" id="3_tpjfj"]
[ext_resource type="Texture2D" uid="uid://crc61gjwfbaly" path="res://Sprites/UI/QuitButton.PNG" id="4_ptmtg"]
[ext_resource type="Script" path="res://Scripts/UI/quit_button.gd" id="5_2npyn"]
[ext_resource type="AudioStream" uid="uid://dp2c8djuybs5r" path="res://Audio/OutOfControlMenuStereoF.mp3" id="6_4eou7"]
[ext_resource type="Script" path="res://Scripts/GameManagement/gameholder.gd" id="7_7mxfn"]

[node name="StartMenuWindow" type="Node2D"]
z_index = -2

[node name="MenuBg" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(514, 268)
texture = ExtResource("1_alwwl")

[node name="StartButt" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(764, 182)
texture = ExtResource("2_2cvrk")
script = ExtResource("3_tpjfj")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 695.0
offset_top = 54.0
offset_right = 853.0
offset_bottom = 162.0
theme_override_icons/icon = ExtResource("2_2cvrk")
action_mode = 0
keep_pressed_outside = true
icon = ExtResource("2_2cvrk")

[node name="QuitButt" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(766, 275)
texture = ExtResource("4_ptmtg")
script = ExtResource("5_2npyn")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_4eou7")
volume_db = -3.687
autoplay = true

[node name="GameHolder" type="Node2D" parent="."]
script = ExtResource("7_7mxfn")
